# Assimp-FBXLoader

./: .gitignore  CMakeLists.txt  README.md
code/Common/: ImporterRegistry.cpp
code/FBX/: FBXParser.cpp
include/assimp/: importerdesc.h
